@@ -1290,6 +1290,7 @@ namespace Magick
   using MagickCore::NoValue;
   using MagickCore::OilPaintImage;
   using MagickCore::OpaquePaintImage;
+  using MagickCore::OrderedPosterizeImage;
   using MagickCore::OptionError;
   using MagickCore::OptionFatalError;
   using MagickCore::OptionWarning;
@@ -1340,7 +1341,10 @@ namespace Magick
   using MagickCore::SampleImage;
   using MagickCore::ScaleImage;
   using MagickCore::SegmentImage;
+  using MagickCore::SelectiveBlurImage;
+  using MagickCore::SelectiveBlurImageChannel;
   using MagickCore::SeparateImageChannel;
+  using MagickCore::SepiaToneImage;
   using MagickCore::SetClientName;
   using MagickCore::SetGeometry;
   using MagickCore::SetImageAlphaChannel;
@@ -1373,6 +1377,8 @@ namespace Magick
   using MagickCore::SimilarityMetricImage;
   using MagickCore::SigmoidalContrastImageChannel;
   using MagickCore::SignatureImage;
+  using MagickCore::SketchImage;
+  using MagickCore::SmushImages;
   using MagickCore::SolarizeImage;
   using MagickCore::SparseColorImage;
   using MagickCore::SpliceImage;
@@ -1391,6 +1397,7 @@ namespace Magick
   using MagickCore::SyncAuthenticPixels;
   using MagickCore::TextureImage;
   using MagickCore::ThrowException;
+  using MagickCore::TintImage;
   using MagickCore::TransformImage;
   using MagickCore::TransformImageColorspace;
   using MagickCore::TransparentPaintImage;
@@ -1403,9 +1410,11 @@ namespace Magick
   using MagickCore::TypeWarning;
   using MagickCore::UndefinedException;
   using MagickCore::UndefinedRegistryType;
+  using MagickCore::UniqueImageColors;
   using MagickCore::UnregisterMagickInfo;
   using MagickCore::UnsharpMaskImage;
   using MagickCore::UnsharpMaskImageChannel;
+  using MagickCore::VignetteImage;
   using MagickCore::CacheView;
   using MagickCore::WaveImage;
   using MagickCore::WhiteThresholdImage;
@@ -1423,5 +1432,18 @@ namespace Magick
 #endif // MAGICKCORE_IMPLEMENTATION
 
 }
+
+//////////////////////////////////////////////////////////////////////
+//
+// No user-serviceable parts beyond this point
+//
+//////////////////////////////////////////////////////////////////////
+#define GetPPException \
+  MagickCore::ExceptionInfo \
+    exceptionInfo; \
+  MagickCore::GetExceptionInfo(&exceptionInfo)
+#define ThrowPPException \
+  throwException(exceptionInfo); \
+  (void) MagickCore::DestroyExceptionInfo(&exceptionInfo)
 
 #endif // Magick_Include_header
